<resources>
    <string name="app_name">Barze</string>
    <string name="action_settings">Settings</string>
    <string name="image_caption">Bar image</string>
    <string name="cover_label">COVER</string>
    <string name="wait_label">WAIT</string>
    <string name="atmosphere_label">ATMOSPHERE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Bar Name</string>
    <string name="prompt_hours">Hours</string>
    <string name="prompt_wait">Wait Time</string>
    <string name="prompt_cover">Cover Charge</string>
    <string name="prompt_atmosphere">Describe the atmosphere</string>
    <string name="prompt_hh">Happy Hour Times</string>
    <string name="prompt_deals">Bar Deals</string>
    <string name="prompt_events">Bar Events</string>
    <string name="prompt_menu">Insert Menu Link</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="minutes_abbreviation">%1$s mins.</string>
    <string name="review_activity_title">Report Bar Conditions</string>
    <string name="title_activity_update_bar">UpdateBarActivity</string>
    <string name="title_activity_delete_bar">DeleteBarActivity</string>
    <string name="update_header">Tell us about the conditions at %1$s.</string>
    <string name="delete_conf">Are you sure you want to delete?</string>

</resources>
