<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".AddBarActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp"/>

        <TextView
            android:id="@+id/review_title"
            android:layout_width="140dp"
            android:layout_height="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Tell Us About A Bar"
            android:textColor="#690002"
            android:textFontWeight="4"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.396" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_name"
            android:hint="@string/prompt_name"
            android:inputType="textShortMessage"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_hours"
            android:hint="@string/prompt_hours"
            android:inputType="textShortMessage|time"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/wait"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_wait"
            android:hint="@string/prompt_wait"
            android:inputType="number"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hours" />

        <EditText
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_cover"
            android:hint="@string/prompt_cover"
            android:inputType="number"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wait" />

        <EditText
            android:id="@+id/hh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_hh"
            android:hint="@string/prompt_hh"
            android:inputType="textShortMessage|time"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cover" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="76dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/cover"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/atmosphere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Atmosphere"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintVertical_bias="0.704" />

        <EditText
            android:id="@+id/atm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_atmosphere"
            android:hint="@string/prompt_atmosphere"
            android:inputType="textShortMessage"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/atmosphere" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Details"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/atm" />

        <EditText
            android:id="@+id/deals"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:autofillHints="@string/prompt_deals"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/prompt_deals"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details" />

        <EditText
            android:id="@+id/events"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/prompt_events"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/prompt_events"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deals" />

        <EditText
            android:id="@+id/menu"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/prompt_menu"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/prompt_menu"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/events" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_black_24dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

