<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddBarActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"/>

    <TextView
        android:id="@+id/update_title"
        android:layout_width="107dp"
        android:layout_height="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Tell Us About A Bar"
        android:textColor="#690002"
        android:textFontWeight="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/update_wait"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_wait"
        android:hint="@string/prompt_wait"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="36dp" />

    <EditText
        android:id="@+id/update_cover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_cover"
        android:hint="@string/prompt_cover"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_wait" />

    <View
        android:id="@+id/update_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="36dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/update_cover"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/update_atmosphere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Atmosphere"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_divider"
        app:layout_constraintVertical_bias="0.704" />

    <RadioGroup
        android:id="@+id/update_radioGroup"
        android:layout_width="243dp"
        android:layout_height="120dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="489dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_atmosphere">

        <RadioButton
            android:id="@+id/dead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dead" />

        <RadioButton
            android:id="@+id/vibin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Just Vibin'" />

        <RadioButton
            android:id="@+id/lit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lit!" />

        <RadioButton
            android:id="@+id/packed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Too Packed" />
    </RadioGroup>

    <TextView
        android:id="@+id/update_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Details"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_radioGroup" />

    <EditText
        android:id="@+id/update_deals"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/prompt_deals"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/prompt_deals"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_details" />

    <EditText
        android:id="@+id/update_events"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_events"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/prompt_events"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_deals" />

    <Button
        android:id="@+id/update_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="Submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
